Fixed the close button being off center

--- a/static/src/style/footer.styl
+++ b/static/src/style/footer.styl
@@ -53,7 +53,7 @@
 
       .stats-btn {
         align-self: center;
-        margin-left: 33px;
+        margin-left: 32px;
         z-index: 3;
       }
     }
