--- a/static/src/style/stats-panel.styl
+++ b/static/src/style/stats-panel.styl
@@ -17,8 +17,8 @@
   .icon-close {
     cursor: pointer;
     position: absolute;
-    top: -13;
-    right: -13;
+    top: -16px;
+    right: -12px;
   }
 
   .stats-row {
